--- a/student.html
+++ b/student.html
@@ -39,10 +39,10 @@
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>0451 244 8800 -899</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
-          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://twitter.com/ssmiet" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/ssmdindigul/" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/lifeatssm?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/ssmiet-dgl/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </div><!-- End Top Bar -->
