--- a/student.html
+++ b/student.html
@@ -96,15 +96,16 @@
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>Pdf Files</h2>
-    <p><span>ECE dept Students and faculties </span> <span class="description-title">Publications</span></p>
+    <p><span>ECE dept Students and Faculties </span> <span class="description-title">Publications</span></p>
   </div><!-- End Section Title -->
 <!-- <div class="box"></div> -->
    <div class="container">
 
     <!-- PDF 1 -->
-    <h3>PDF File 1</h3>
-    <iframe src="assets/" class="pdf-viewer"></iframe>
-    <a href="pdfs/file1.pdf" target="_blank" class="pdf-link">Open in New Tab</a>
+    <h3>News Letter</h3>
+    <p>July to December-2024</p>
+    <iframe src="assets/pdf/july - dec 2024 (1).pdf" class="pdf-viewer"></iframe>
+    <a href="assets/pdf/july - dec 2024 (1).pdf" target="_blank" class="pdf-link">Open in New Tab</a>
 
     <!-- PDF 2 -->
     <h3>PDF File 2</h3>
@@ -181,11 +182,11 @@
 
       <div class="col-lg-4 col-md-12">
         <h4>Follow Us</h4>
-        <div class="social-links d-flex">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+        <div class="social-links d-none d-md-flex align-items-center">
+          <a href="https://twitter.com/ssmiet" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/ssmdindigul/" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/lifeatssm?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/ssmiet-dgl/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
