--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -285,11 +285,11 @@
 
         <div class="col-lg-4 col-md-12">
           <h4>Follow Us</h4>
-          <div class="social-links d-flex">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+          <div class="social-links d-none d-md-flex align-items-center">
+            <a href="https://twitter.com/ssmiet" class="twitter"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/ssmdindigul/" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/lifeatssm?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/ssmiet-dgl/" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
