--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-people"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="19" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="22" data-purecounter-duration="1" class="purecounter"></span>
               <p>Staffs</p>
             </div>
           </div><!-- End Stats Item -->
@@ -337,7 +337,7 @@
             }
           </script>
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/client (1).png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client (1).jpg" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client (2).png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client (3).png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client (4).png" class="img-fluid" alt=""></div>
@@ -347,7 +347,9 @@
             <div class="swiper-slide"><img src="assets/img/clients/client (8).png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client (9).png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client(10).jpg" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client (11).png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client(11).jpg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client(12).png" class="img-fluid" alt=""></div>
+
 
 
 
@@ -393,15 +395,17 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/testimonials (5).jpeg" class="testimonial-img" alt="">
                 <h3>Nivethitha Thiyagarajan</h3>
-                <h4>Infosys Limited &amp; Systems Engineer</h4>
+                <h4>Systems Engineer,Infosys Limited</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
+                  <span>
+                    "The ECE department at SSMIET has been a game-changer in my academic journey. The faculty are supportive, 
+                    and the practical sessions helped me gain hands-on experience with real-time applications. I’m grateful for the guidance I received here!"</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -409,7 +413,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/testimonials (3).jpeg" class="testimonial-img" alt="">
                 <h3>Pradeepraja</h3>
                 <h4>Progran analyst trainer,CTS</h4>
                 <div class="stars">
@@ -417,7 +421,8 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                  <span>"What I love most about our department is the friendly environment and access to modern labs. 
+                    We’re encouraged to innovate, participate in paper presentations, and explore mini-projects from the first year itself."</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -425,15 +430,16 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Pritadharshini</h3>
+                <img src="assets/img/testimonials/testimonials (4).jpeg" class="testimonial-img" alt="">
+                <h3>Priyadharshini</h3>
                 <h4>Software Engineer,HCL</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                  <span>"The curriculum is well-structured and updated with current trends in electronics and communication. 
+                    The faculty always motivate us to take part in national-level competitions and internships. It’s more than just academics here."</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -441,7 +447,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/testimonials (2).jpeg" class="testimonial-img" alt="">
                 <h3>Vigneshwaran</h3>
                 <h4>System Engineer,TCS</h4>
                 <div class="stars">
@@ -449,7 +455,8 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                  <span> "Being part of the ECE department is like being in a big family. The faculty are approachable, 
+                    and the technical clubs helped me discover my passion for electronics. I’ve grown so much personally and professionally."</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -457,15 +464,16 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <img src="assets/img/testimonials/testimonials (1).jpeg" class="testimonial-img" alt="">
+                <h3>Paraloga Selvi</h3>
+                <h4>Project Engineer,WIPRO</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
+                  <span> "Thanks to the department’s focus on both theory and application,
+                     I was able to develop a project that won first place at a state-level tech expo. The confidence I’ve gained here is priceless</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
