--- a/team.html
+++ b/team.html
@@ -219,7 +219,7 @@
               </div>
               <div class="member-info">
                 <h4>Dr.M.Manikandan</h4>
-                <span>AP</span>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -237,7 +237,7 @@
               </div>
               <div class="member-info">
                 <h4>Dr.Carol Praveen</h4>
-                <span>AP</span>
+                <span>Assosiate Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -255,7 +255,7 @@
               </div>
               <div class="member-info">
                 <h4>Dr.R.Senthil Kumar</h4>
-                <span>AP</span>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -273,7 +273,7 @@
               </div>
               <div class="member-info">
                 <h4>Dr.Jay Fantin</h4>
-                <span>AP</span>
+                <span>Assosiate Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -289,8 +289,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Dr.J.Vetrimanikumar</h4>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -306,8 +306,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Dr.G.Saranya</h4>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -323,8 +323,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Dr.Karthiga</h4>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -340,8 +340,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Dr.R.Sudha</h4>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -357,8 +357,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Dr.K.Divya</h4>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -374,8 +374,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Dr.K.Ganapriya</h4>
+                <span>Assosiate Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -391,8 +391,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Dr.E.Thanagadeepiga</h4>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -408,8 +408,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Dr.A.Arockia healn sushma</h4>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -425,8 +425,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Dr.Keerthana</h4>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -442,8 +442,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Dr.Geetha</h4>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -459,8 +459,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Dr.Sathya shivaranjani</h4>
+                <span>Assistant Professor</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -476,8 +476,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Mr.Vairamani</h4>
+                <span>Lab In Charge</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -493,8 +493,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Mr.M.Balachandran</h4>
+                <span>Lab In Charge</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -510,8 +510,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Mrs.R.Soundira pandiyammal</h4>
+                <span>Lab In Charge</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -527,8 +527,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4></h4>
-                <span></span>
+                <h4>Mrs.V.Kalaiselvi</h4>
+                <span>Lab In Charge</span>
               </div>
             </div>
           </div><!-- End Team Member -->
